helm/monitoring/graphana-expose.service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-expose
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 3030       # The port you want to expose externally
      targetPort: 3000  # The port Grafana is listening on inside the pod
      nodePort: 30001 # Choose a port between 30000-32767
  selector:
    app.kubernetes.io/name: grafana
